--- a/source/sass/blocks/pick-and-feed.scss
+++ b/source/sass/blocks/pick-and-feed.scss
@@ -140,7 +140,7 @@
 @media (max-width: $small-desktop-width) {
   .pick-and-feed {
     padding-top: 30px;
-    padding-bottom: 50px;
+    padding-bottom: 48px;
   }
   .pick-and-feed__wrapper {
     max-width: 940px;
