--- a/source/sass/blocks/testimonials.scss
+++ b/source/sass/blocks/testimonials.scss
@@ -113,7 +113,7 @@ input[type=range]::-moz-range-thumb {
 @media (max-width: $small-desktop-width) {
   .testimonials {
     padding-top: 65px;
-    padding-bottom: 137px;
+    padding-bottom: 138px;
     background-image: url("../assets/img/leav_bg_small-desktop.png");
     background-position: right 604px;
     background-size: 196px 325px;
@@ -142,7 +142,7 @@ input[type=range]::-moz-range-thumb {
     height: 6px;
   }
   .testimonials__link {
-    padding: 15px 79px;
+    padding: 15px 84px;
   }
 }
 
