--- a/source/sass/blocks/watch-your-favorite-animal.scss
+++ b/source/sass/blocks/watch-your-favorite-animal.scss
@@ -57,7 +57,7 @@
   .watch-your-favorite-animal {
     padding-bottom: 47px;
     background-image: url("../assets/img/giant-panda_small-desktop.jpg");
-    background-position: center -77px;
+    background-position: center -70px;
   }
   .watch-your-favorite-animal__wrapper {
     width: 100%;
@@ -68,7 +68,7 @@
     font-size: 85px;
     margin-top: 44px;
     margin-right: 55px;
-    margin-bottom: 44px;
+    margin-bottom: 39px;
     &::before {
       width: 367px;
       height: 367px;
